actions/govbot/tests/snapshots/cli_example_snaps__snapshot@freshness_json.snap
---
source: tests/cli_example_snaps.rs
expression: "&formatted_stdout"
---
Command:
govbot freshness --json

Output:
{"action_lag_days":0,"actions":72,"bills":10,"code":"wy","ingest_lag_days":0,"last_ingest":"2025-12-02T03:47:33+00:00","newest_action":"2025-12-01T17:15:11+00:00","repo":"wy-legislation"}
{"action_lag_days":null,"actions":0,"bills":5,"code":"gu","ingest_lag_days":5,"last_ingest":"2025-11-27T00:27:21+00:00","newest_action":null,"repo":"gu-legislation"}
