actions/govbot/tests/snapshots/cli_example_snaps__snapshot@govbot_help.snap
---
source: tests/cli_example_snaps.rs
expression: "&formatted_stdout"
---
Command:
govbot --help

Output:
Process pipeline log files with type-safe reactive streams

Usage: govbot [COMMAND]

Commands:
  clone   Clone or pull data pipeline repositories (default: updates existing repos) Clones if repository doesn't exist, pulls if it does Use "govbot clone all" to clone all repos, or "govbot clone <repo>" for specific repos
  query   Query cloned legislation and get back a bounded, cited JSON answer
  logs    Process and display pipeline log files
  delete  Delete data pipeline repositories Deletes local repository directories for specified locales
  load    Load bill metadata into a DuckDB database file Loads all metadata.json files from cloned repos into a DuckDB database for analysis. The database file is saved in the base govbot directory (e.g., ./govbot_data/govbot.duckdb)
  update  Update govbot to the latest nightly version Downloads and installs the latest nightly build from GitHub releases
  build   Build RSS feed and HTML index from govbot.yml configuration Generates a combined RSS feed and HTML index from logs filtered by tags in govbot.yml
  tag     Tag bills using semantic or built-in similarity based on govbot.yml in the current directory. Reads JSON lines from stdin (from `govbot logs`), processes entries with bill identifiers, and writes per-tag files under the directory containing govbot.yml. By default, acts as a filter: only outputs lines that match tags. If a tag name is provided, only processes and outputs lines matching that specific tag
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
