actions/govbot/tests/snapshots/cli_example_snaps__snapshot@govbot_pull_list.snap
---
source: tests/cli_example_snaps.rs
expression: "&formatted_stdout"
---
Command:
govbot pull --list

Output:
Available datasets:
  ak
  al
  ar
  az
  ca
  co
  ct
  de
  fl
  ga
  gu
  hi
  ia
  id
  il
  in
  ks
  ky
  la
  ma
  md
  me
  mi
  mn
  mo
  mp
  ms
  mt
  nc
  nd
  ne
  nh
  nj
  nm
  nv
  ny
  oh
  ok
  or
  pa
  pr
  ri
  sc
  sd
  tn
  tx
  usa
  ut
  va
  vi
  vt
  wa
  wi
  wv
  wy
  all (pull every dataset)
