actions/govbot/tests/snapshots/cli_example_snaps__snapshot@logs_basic.snap
---
source: tests/cli_example_snaps.rs
expression: "&formatted_stdout"
---
Command:
govbot logs

Output:
